tests/NormalTests/paczka1/fuzzy1/67989488.err
Error in line 5: lmTK A376 20,4
Error in line 23: lmKY0P A489 50,0
Error in line 27: A376 A489 5,3
Error in line 28: lmKY0P A460 85,9
Error in line 30: A376 A376 75,6
Error in line 34: A376 A460 30,3
Error in line 31: l1f9cT A460 70,8
